k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: jerney
  labels:
    app.kubernetes.io/part-of: jerney
