k8s/backend.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: jerney-backend
  namespace: jerney
  labels:
    app.kubernetes.io/name: jerney-backend
    app.kubernetes.io/part-of: jerney
    app.kubernetes.io/component: backend
spec:
  replicas: 2
  selector:
    matchLabels:
      app.kubernetes.io/name: jerney-backend
  template:
    metadata:
      labels:
        app.kubernetes.io/name: jerney-backend
        app.kubernetes.io/part-of: jerney
        app.kubernetes.io/component: backend
    spec:
      automountServiceAccountToken: false
      tolerations:
        - key: "karpenter.sh/disrupted"
          operator: "Exists"
          effect: "NoSchedule"
      containers:
        - name: backend
          image: ghcr.io/curioos/jerney/jerney-backend:4a07579
          ports:
            - containerPort: 5000
              protocol: TCP
          resources:
            requests:
              cpu: 100m
              memory: 128Mi
            limits:
              cpu: 300m
              memory: 256Mi
          securityContext:
            allowPrivilegeEscalation: false
            readOnlyRootFilesystem: true
            runAsNonRoot: true
            runAsUser: 1000
            capabilities:
              drop:
                - ALL
          livenessProbe:
            httpGet:
              path: /api/health
              port: 5000
            initialDelaySeconds: 10
            periodSeconds: 15
            timeoutSeconds: 5
          readinessProbe:
            httpGet:
              path: /api/health
              port: 5000
            initialDelaySeconds: 5
            periodSeconds: 5
            timeoutSeconds: 3

---
apiVersion: v1
kind: Service
metadata:
  name: jerney-backend
  namespace: jerney
  labels:
    app.kubernetes.io/name: jerney-backend
    app.kubernetes.io/part-of: jerney
    app.kubernetes.io/component: backend
spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/name: jerney-backend
  ports:
    - name: http-api
      port: 5000
      targetPort: 5000
      protocol: TCP
